# Mipsy

./: .gitignore  .history  CMakeLists.txt  README.md  SPECIFICATION.md  out.s  siyou.md  tree_log.txt
codegen/: CMakeLists.txt
codegen/include/: generate_code.h  mips_code.h  mips_print.h  mips_reg.h
codegen/src/: gen_addr.c  gen_expr.c  gen_stmt.c  generate.c  internal.h  mips_code.c  mips_print.c  mips_reg.c  optimize.c
include/: make_ast.h  print_ast.h  types.h
src/: basic_ls.l  basic_ls.y  main.c  make_ast.c  print_ast.c
tests/: final1.txt  final2.txt  final3.txt  final4.txt  final5.txt  final5d.txt  final6.txt  final6d.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test_fib.txt  test_swap.txt
